--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 PORT=5000
 MONGODB_URL="mongodb+srv://harishnandre1:MZggsdYTiwbrAYs0@cluster0.s9rsy.mongodb.net/JobQuest"
 SECRET_KEY=MBNCKSHFLNSLDJLANBZJBCKJB
+
+CLOUDNAME = dzsr5q9rx
+API_KEY = 786524693868113
+API_SECRET = keRXs-_5FiOxtjA73FJ3SbjV1D8
