--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 PORT=5000
-MONGODB_URL="mongodb+srv://harishnandre1:MZggsdYTiwbrAYs0@cluster0.s9rsy.mongodb.net/JobQuest"
+MONGODB_URL="mongodb+srv://mdtauqeer525217:Wbd0k82jMziX1sIO@cluster0.s9rsy.mongodb.net/JobQuest"
 SECRET_KEY=MBNCKSHFLNSLDJLANBZJBCKJB
+
+CLOUDINARY_API_KEY=535468513936479
+CLOUDINARY_API_SECRET=1ORjV2puDqN7T-njO8FMA1Au2pk
+CLOUDINARY_NAME=diwkiifd3
