--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URL="mongodb+srv://mdtauqeer525217:Wbd0k82jMziX1sIO@cluster0.s9rsy.mongodb.net/JobQuest"
+MONGODB_URL="mongodb+srv://talhaali384672:2cYcIbaa5krj5SoD@cluster0.s9rsy.mongodb.net/JobQuest"
 SECRET_KEY=MBNCKSHFLNSLDJLANBZJBCKJB
 
 CLOUDINARY_API_KEY=535468513936479
