Making Resume Link(viewing in profile and job seekers applicants)

--- a/backend/.env
+++ b/backend/.env
@@ -7,7 +7,11 @@ SECRET_KEY=MBNCKSHFLNSLDJLANBZJBCKJB
 # API_KEY = 535468513936479   786524693868113
 # API_SECRET = 1ORjV2puDqN7T-njO8FMA1Au2pk  keRXs-_5FiOxtjA73FJ3SbjV1D8
 # =======
-CLOUDINARY_API_KEY=  535468513936479
-CLOUDINARY_API_SECRET= 1ORjV2puDqN7T-njO8FMA1Au2pk
-CLOUDINARY_NAME= diwkiifd3
-
+# tauqeer cloudinary
+# CLOUDINARY_API_KEY=  535468513936479
+# CLOUDINARY_API_SECRET= 1ORjV2puDqN7T-njO8FMA1Au2pk
+# CLOUDINARY_NAME= diwkiifd3
+# harish cloudinary
+CLOUDINARY_API_KEY=  621831314836936
+CLOUDINARY_API_SECRET= sSZC8Yn6Ed_a5PZK4U4IXlnXeFo
+CLOUDINARY_NAME= dsw05upgz
