Protected Route and Email Automation(talha)

--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,12 @@ CLOUDINARY_API_KEY=  621831314836936
 CLOUDINARY_API_SECRET= sSZC8Yn6Ed_a5PZK4U4IXlnXeFo
 CLOUDINARY_NAME= dsw05upgz
 
+SMTP_SERVICE=gmail
+
+SMTP_MAIL=talhaali384672@gmail.com 
+
+SMTP_PASSWORD=ubaj aryh mubv cdbm
+
+SMTP_PORT=465
+
+SMTP_HOST=smtp.gmail.com
